--- a/AJAX/Actividad1/public/index.html
+++ b/AJAX/Actividad1/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-
+        <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css">
     </head>
 
     <body>
@@ -12,7 +12,7 @@
             <br>
             <input type="text" name="nick" id="nick" placeholder="Nickname">
             <br>
-            <input type="tel" name="tel" id="tel" placeholder="Tel">
+            <input type="number" name="tel" id="tel" placeholder="Tel">
             <br>
             <input type="number" name="edad" id="edad" placeholder="Edad">
             <br>
@@ -24,7 +24,7 @@
         <a href="ListaDePosts.html">Ir a Lista de posts</a>
 
 
-        <p id="users">a</p>
-        <script src="script.js"></script>
+        <p id="users"></p>
+        <script src="fetchSc1.js"></script>
     </body>
 </html>
